--- a/CLient_CS_UWP/CLient_CS_UWP/LoginPage.xaml
+++ b/CLient_CS_UWP/CLient_CS_UWP/LoginPage.xaml
@@ -33,7 +33,8 @@
             UseSystemFocusVisuals="False"
             VerticalScrollBarVisibility="Auto"
             VerticalScrollMode="Auto">
-            <StackPanel HorizontalAlignment="Left">
+            <StackPanel HorizontalAlignment="Center"
+                         VerticalAlignment="Center">
                 <TextBlock
                     Style="{StaticResource TitleTextBlockStyle}"
                     Margin="0,4,0,0"
